isoforms started wth fake psi data eventhandler propagates isoForm selection

--- a/style.scss
+++ b/style.scss
@@ -32,3 +32,26 @@
   }
 
 }
+
+.isoform {
+  .exon{
+    fill-opacity: .5;
+    pointer-events: none;
+  }
+  .background{
+
+    fill:white;
+
+  }
+  .selected{
+    stroke:orange;
+  }
+  .fixed{
+    fill:orange;
+  }
+
+  .sampleDot
+    {
+    fill-opacity: .5;
+  }
+}
