--- a/style.scss
+++ b/style.scss
@@ -4,11 +4,11 @@
  */
 
 // Wes Anderson Color Palette from http://wesandersonpalettes.tumblr.com/ - Fantastic Mr. Fox
-$wes-gray: B9B09F;
-$wes-yellow: E8C95D;
-$wes-green: A9D8C8;
-$wes-violet: 433447;
-$wes-red: D16B54;
+$wes-gray: #B9B09F;
+$wes-yellow: #E8C95D;
+$wes-green: #A9D8C8;
+$wes-violet: #433447;
+$wes-red: #D16B54;
 
 //by convention create a namespace for your own plugin
 .gv {
@@ -42,8 +42,9 @@ $wes-red: D16B54;
 
 .isoform {
   .exon{
-    fill-opacity: .5;
+    fill-opacity: .8;
     pointer-events: none;
+    fill:$wes-violet;
   }
   .background{
 
@@ -58,7 +59,11 @@ $wes-red: D16B54;
   }
 
   .sampleDot
-    {
-    fill-opacity: .5;
+  {
+    fill:$wes-gray;
+    fill-opacity: .7;
+  }
+  .sampleDot.highlighted{
+    fill:$wes-red;
   }
 }
