--- a/style.scss
+++ b/style.scss
@@ -262,7 +262,11 @@ input.btn-mini {
 }
 
 path.stdDev{
-  fill:$wes-violet;
+  fill: #48443D;
+  stroke:none;
+  //fill-opacity: .6;
+  //stroke:$wes-gray;
+  //stroke-width: 1px;
 }
 
 
