--- a/style.scss
+++ b/style.scss
@@ -269,6 +269,11 @@ path.stdDev{
   //stroke-width: 1px;
 }
 
+.isoOptions{
+  color:$wes-violet;
+  opacity: .8;
+}
+
 
 // ===> here for html <===
 #visReads{
