fixed #78 - requires server component reload !

--- a/style.scss
+++ b/style.scss
@@ -23,7 +23,7 @@ $wes-blue: #0093dd;
   //    min-height:200px;
   //    max-height:200px;
   //  }
-  .axis text {
+  .axis text, .axisLabel {
     font: 10px sans-serif;
   }
 
