isoform selection indication/selection improved

--- a/style.scss
+++ b/style.scss
@@ -110,6 +110,8 @@ text.decoration.selected {
   }
 }
 
+
+
 .isoform {
   .exon{
     fill-opacity: .8;
@@ -320,6 +322,10 @@ input.btn-mini {
     opacity: .6;
     stroke: none;
   }
+  .areaCon.hiddenCon{
+    opacity: 0.1;
+  }
+
   .areaCon.highlighted{
     opacity: 1;
   }
@@ -330,6 +336,10 @@ input.btn-mini {
     opacity: .5;
     pointer-events: none;
   }
+  .lineCon.hiddenCon{
+    opacity: 0.1;
+  }
+
   .lineCon.highlighted{
     opacity: 1;
     stroke-width: 2px;
@@ -364,6 +374,14 @@ input.btn-mini {
     stroke-opacity: .3;
     stroke-dasharray: 7, 1 ;
     pointer-events: none;
+  }
+
+  .inIsoformIndicator{
+    fill:$wes-yellow;//TODO: get from isoform
+    stroke: $wes-violet;
+    stroke-opacity: 1;
+
+
   }
 }
 
